# rag-tool

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  SECURITY.md  error  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_plugin_request.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: architecture.md  configuration.md  development.md  git-hooks.md  mcp-tools.md  performance.md  quickstart.md  troubleshooting.md
docs/clients/: aider.md  antigravity.md  claude_code.md  claude_desktop.md  cline.md  codex.md  continue.md  cursor.md  factory.md  gemini.md  minimax.md  universal.md  windsurf.md  zed.md
docs/internal/: initial-design.md
scripts/: replace-placeholders.ps1  replace-placeholders.sh  watch.ps1
scripts/dev/: _check_exclusions.py  _chunk_test.py  _db_inspect.py  _preview_repo.py  _set_last_commit.py  _smoke_runtime.py
src/repo_rag/: __init__.py  _runtime.py  chunker.py  cli.py  config.py  context.py  fileutils.py  hasher.py  hooks.py  indexer.py  mcp_server.py  memory.py  paths.py  preview.py  registry.py  search.py
src/repo_rag/agents/: __init__.py  _rules_text.py  aider.py  antigravity.py  base.py  claude_code.py  claude_desktop.py  cline.py  codex.py  continue_.py  cursor.py  factory.py  gemini.py  minimax.py  registry.py  universal.py  windsurf.py  zed.py
src/repo_rag/embedder/: __init__.py  base.py  local.py  ollama.py  openai_compat.py
src/repo_rag/store/: lance.py  sqlite.py
tests/: conftest.py  test_chunker.py  test_cli_preview.py  test_fileutils.py  test_hasher.py  test_hooks.py  test_memory.py  test_preview.py  test_registry.py  test_search_merge.py
tests/agents/: test_mcp_install.py  test_minimax.py  test_plugin_round_trip.py  test_registry.py  test_rules_text.py
