[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-rag"
dynamic = ["version"]
description = "Local RAG indexer and MCP server for AI coding agents (Claude, GPT, Gemini, Cursor, Factory Droid, and more)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ramanan Balamurugan", email = "ramanan.bala2003@gmail.com" }]
keywords = [
    "rag",
    "mcp",
    "model-context-protocol",
    "code-search",
    "embeddings",
    "lancedb",
    "fastembed",
    "claude",
    "claude-code",
    "gpt",
    "codex",
    "gemini",
    "cursor",
    "windsurf",
    "factory-droid",
    "ai-agents",
    "agents-md",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.0,<3",
    "tomli-w>=1.0,<2",
    "pathspec>=0.12,<1",
    "rich>=13,<14",
    "httpx>=0.27,<1",
    "numpy>=1.26,<3",
    "lancedb>=0.10,<1",
    "pyarrow>=15,<22",
    "fastembed>=0.4,<1",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.5,<6"]
openai = ["openai>=1.30,<2"]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "build>=1.2,<2",
]
all = [
    "sentence-transformers>=2.5,<6",
    "openai>=1.30,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
]

[project.scripts]
rag = "repo_rag.cli:app"

[project.urls]
Homepage = "https://github.com/ramanan-bala/repo-rag"
Repository = "https://github.com/ramanan-bala/repo-rag"
Issues = "https://github.com/ramanan-bala/repo-rag/issues"
Changelog = "https://github.com/ramanan-bala/repo-rag/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ramanan-bala/repo-rag/tree/main/docs"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "repo_rag.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_rag = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]
ignore = ["E501", "B008", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
"src/repo_rag/cli.py" = ["E402"]
"src/repo_rag/mcp_server.py" = ["E402"]
"scripts/dev/**" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
